# cfa-viral-lineage-model

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  notation.md  pyproject.toml  requirements.txt
.github/workflows/: run-pytest.yaml  tests.yaml
data/: README.md  included-divisions.txt  load_metadata.py
docs/: api.md  architecture.md  index.md  notation.md
exploration/: README.md  clade_year_maps.py  constant_model.py  demo.py  fit_model.py  linmod_demo.py  load_metadata.py  models.py  priors.qmd  run_simulation_study.py  spatiotemporal_model.py  utils.py  visualize.R  visualize_sim_study.R  whole_hist_viz.py
exploration/demo/: Makefile  README.md  config.yaml  config_demo.yaml  evaluate.py  fit_baseline_model.py  fit_indep_div_model.py  fit_model.py  main.py  visualize.R  visualize_samples.py
exploration/domination-time/: fit_baseline_model.py  visualize_samples.py
exploration/simulation-study/: README.md  main.py  visualize.R
linmod/: __init__.py  data.py  eval.py  eval_counts.py  models.py  utils.py  visualize.py
linmod/eval/: proportions.py
linmod/models/: __init__.py  models.py  utils.py
linmod/tests/: test_batch_sampler.py  test_eval.py  test_frames.py  test_hhs_agg.py  test_models.py
present-day-forecasting/: README.md  config-data.yaml  config-main.yaml  config.yaml  main.py
prototype/: baseline_model.py  constant_model.py  constant_rate_model.py  hierarchical_model.py  load_metadata.py  requirements.txt  spatiotemporal_model.py  visualize.R
prototype/vlmodel/: __init__.py  data.py  models.py
retrospective-forecasting/: README.md  main.py  pop_sizes_nst_est_2023.csv  run_all.sh
retrospective-forecasting/config/: 2023-variant-soup.yaml  (+5 more)
single-day-forecasting/: README.md  config.yaml  main.py
(+8 files in other folders)
