[project]
name = "linmod"
version = "0.1.0"
description = ""
authors = [
    { name = "Andy Magee", email = "rzg0@cdc.gov" },
    { name = "Scott Olesen", email = "ulp7@cdc.gov" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "numpyro>=0.15.0,<0.16",
    "numpy>=2.0.0,<3",
    "polars>=1.1.0,<2",
    "scipy>=1.14.0,<2",
    "zstandard>=0.22.0,<0.23",
    "plotnine",
    "pyarrow>=17.0.0,<18",
    "mkdocs>=1.6.0,<2",
    "mkdocstrings[python]>=0.25.2,<0.26",
    "mkdocs-material>=9.5.30,<10",
    "mdx-truly-sane-lists>=1.3,<2",
    "cladecombiner",
]

[dependency-groups]
dev = ["pytest>=8.2.2,<9"]

[tool.uv]

[tool.uv.sources]
cladecombiner = { git = "https://github.com/CDCGov/cladecombiner", rev = "afm-ns" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
